Fix attribution issues
Fixed two issues with the attributions. 1. Fixed bug where report
an issue button wouldn't get prepended to attribution div properly.
2. Moved color legend up 20 pixels to prevent it from covering
attributions.

--- a/denvercode/full/style.css
+++ b/denvercode/full/style.css
@@ -1452,7 +1452,7 @@ body.dragging, body.dragging * {
   position: absolute;
   z-index: 1000;
   right: 5px;
-  bottom: 40px;
+  bottom: 60px;
 
   overflow: hidden;
 
@@ -1992,7 +1992,7 @@ body.dragging, body.dragging * {
   position: absolute;
   z-index: -2;
   right: 5px;
-  bottom: 40px;
+  bottom: 60px;
 
   overflow: hidden;
 
